feat(api): use integer time and latency units
